--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     color: antiquewhite !important;
    }
 
+   body{
+      padding-top: 56px;
+   }
+
 
   
   .pricing-section {
@@ -126,3 +130,9 @@
 .pricing-section .pricing-card button:hover {
    background: #8b2d2d; /* Rojo más claro al hover */
 }
+
+
+body, .contacto {
+   background: url(https://images.fastcompany.com/image/upload/f_webp,q_auto,c_fit/wp-cms/uploads/2016/07/3062206-poster-p-2-the-dangers-of-using-wi-fi-at-an-airbnb.jpg);
+}
+
