cambio en text color de contacto,mejoras de btn

--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,28 @@ body, .contacto {
    background: url(https://images.fastcompany.com/image/upload/f_webp,q_auto,c_fit/wp-cms/uploads/2016/07/3062206-poster-p-2-the-dangers-of-using-wi-fi-at-an-airbnb.jpg);
 }
 
+div, .container-fluid .py-5 .mt-5 .mb-5{
+   color: #f0e9e3;
+}
+
+button, .btn .btn-primary .w-100 .py-2{background-image: linear-gradient(to right, #603813 0%, #b29f94  51%, #603813  100%)}
+button, .btn .btn-primary .w-100 .py-2{
+   margin: 10px;
+            padding: 15px 45px;
+            text-align: center;
+            text-transform: uppercase;
+            transition: 0.5s;
+            background-size: 200% auto;
+            color: white;            
+            box-shadow: 0 0 20px #eee;
+            border-radius: 10px;
+            display: block;
+}
+button, .btn .btn-primary .w-100 .py-2{
+            background-position: right center; /* change the direction of the change here */
+            color: #ca7c7c;
+            text-decoration: none;
+          }
+
+         
+      
