--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,6 @@
    body{
       padding-top: 56px;
    }
-
-
   
   .pricing-section {
    font-family: 'Arial', sans-serif;
@@ -142,6 +140,7 @@ div, .container-fluid .py-5 .mt-5 .mb-5{
 
 button, .btn .btn-primary .w-100 .py-2{
    background-color: rgb(83, 25, 14) !important;
+   border-color: #3a1e1e!important;
 }
 
 
