--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,31 @@ body {
   padding-top: 56px;
 }
 
-body.sobrenosotros{
+body.sobrenosotros {
+  background-image: url(https://c1.wallpaperflare.com/path/518/369/227/web-design-coding-web-developing-macbook-2bd6fcbda3018f8915041b99ed9c7cd0.jpg);
+  position: relative;
   
-         background: #240600;
-background: linear-gradient(315deg, rgba(36, 6, 0, 1) 21%, rgba(84, 65, 54, 1) 40%, rgba(128, 92, 57, 1) 70%, rgba(161, 81, 39, 0.53) 99%);       
 }
+
+.historia-texto {
+    color: aliceblue;
+}
+
+body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Ajusta el último valor (0.5 = 50%) */
+            z-index: -1; /* Coloca la capa detrás del contenido */
+        }
+
+
+
+
+  
 
 h1 span.webcolor{
   color: #420e04;
