--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ body.sobrenosotros::before {
         }
 
 body.contacto::before {
+
             content: "";
             position: absolute;
             top: 0;
@@ -152,6 +153,9 @@ h1 span.webcolor{
 body.contacto {
   
   background: url("https://images.fastcompany.com/image/upload/f_webp,q_auto,c_fit/wp-cms/uploads/2016/07/3062206-poster-p-2-the-dangers-of-using-wi-fi-at-an-airbnb.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 .pricing-section {
